--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Jost:wght@400;500&display=swap");
 * {
   box-sizing: border-box;
 }
@@ -21,12 +22,133 @@ body {
   overflow: overlay;
 }
 
-h2 {
+h1, h2, p, ul {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
+.home-page__left-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.cover-poster {
+  justify-content: center;
+  align-items: center;
+}
+
+.cover-poster {
+  display: flex;
+}
+
 body {
-  background-color: pink;
+  font-family: "Jost";
+  background-color: #F8F8F7;
+}
+
+.title {
+  font-weight: 500;
+}
+
+.text {
+  font-weight: 400;
+}
+
+.app {
+  display: flex;
+}
+
+.home-page {
+  flex-basis: 50%;
+}
+.home-page__left-container {
+  gap: 85px;
+  padding: 30px 72px 0 147px;
+}
+.home-page__title {
+  margin-bottom: 10px;
+  color: #1D1D1D;
+  font-size: 44px;
+  line-height: 58px;
+}
+.home-page__p {
+  margin-bottom: 60px;
+  font-size: 20px;
+  color: #8C8C8C;
+}
+
+.nav__title {
+  margin-bottom: 20px;
+  color: #1D1D1D;
+  font-size: 20px;
+}
+.nav__links {
+  display: flex;
+  gap: 16px;
+}
+.nav__link {
+  margin-bottom: 10px;
+  border-radius: 20px;
+  border: 4px solid rgba(255, 255, 255, 0.6);
+  transition: 0.3s;
+}
+.nav__link-text-container {
+  text-align: center;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: #fff;
+}
+.nav__link-text {
+  color: #FF868E;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+.nav__link:hover {
+  border-color: #fff;
+}
+.nav__link:hover-text-container {
+  background-color: #FBE0DC;
+}
+.nav__link:hover .nav__link-text-container {
+  background-color: #FBE0DC;
+}
+.nav__link:active {
+  border-color: #fbe0dc;
+}
+.nav__link--violet {
+  background-color: #b4b7ff;
+}
+.nav__link--green {
+  background-color: #97eab9;
+}
+.nav__link--yellow {
+  background-color: #ffd280;
+}
+.nav__link-img--gallery {
+  position: relative;
+  top: 10px;
+}
+
+.cover-poster {
+  width: 100%;
+  height: 100vh;
+  padding: 30px;
+  padding-left: 40px;
+}
+.cover-poster__bg {
+  height: 100%;
+  width: 100%;
+  background-color: #fbe0dc;
+  border-radius: 20px;
+}
+.cover-poster__img {
+  position: absolute;
+  right: 0;
 }
 
 /*# sourceMappingURL=index.css.map */
