--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,14 @@
 .app {
   display: flex;
+  height: 100vh;
+  // max-height: 100vh;
+  width: 100vw;
+  justify-content: space-between;
+  padding: 30px;
+  padding-left: 147px;
+}
+
+.dynamic-board {
+  flex-basis: 50%;
+  height: 100%;
 }
