--- a/src/index.css
+++ b/src/index.css
@@ -30,23 +30,38 @@ a {
   text-decoration: none;
 }
 
-.home-page__left-container {
+button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
+
+.voting-container, .voting, .home-page__left-container {
   display: flex;
   flex-direction: column;
 }
 
-.cover-poster {
+.voting-hero, .nav-title-container, .top-nav-link, .top-nav-links, .cover-poster {
   justify-content: center;
   align-items: center;
 }
 
-.cover-poster {
+.voting-hero, .nav-title-container, .top-nav-link, .top-nav-links, .cover-poster {
   display: flex;
+}
+
+.goback {
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 body {
   font-family: "Jost";
-  background-color: #F8F8F7;
+  background-color: #f8f8f7;
 }
 
 .title {
@@ -57,8 +72,25 @@ body {
   font-weight: 400;
 }
 
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .app {
   display: flex;
+  height: 100vh;
+  width: 100vw;
+  justify-content: space-between;
+  padding: 30px;
+  padding-left: 147px;
+}
+
+.dynamic-board {
+  flex-basis: 50%;
+  height: 100%;
 }
 
 .home-page {
@@ -66,7 +98,6 @@ body {
 }
 .home-page__left-container {
   gap: 85px;
-  padding: 30px 72px 0 147px;
 }
 .home-page__title {
   margin-bottom: 10px;
@@ -80,6 +111,108 @@ body {
   color: #8C8C8C;
 }
 
+.cover-poster {
+  width: 100%;
+  height: 100%;
+}
+.cover-poster__bg {
+  height: 100%;
+  width: 100%;
+  background-color: #fbe0dc;
+  border-radius: 20px;
+}
+.cover-poster__img {
+  position: absolute;
+  right: 0;
+}
+
+.top-nav {
+  margin-bottom: 10px;
+  width: 100%;
+  display: flex;
+  gap: 10px;
+}
+
+.search-container {
+  box-sizing: border-box;
+  position: relative;
+  flex: 1;
+}
+
+.input {
+  width: 100%;
+  padding: 15px 20px;
+  border-radius: 20px;
+  background: #fff;
+  border: none;
+  border: 2px solid #fff;
+  color: #1d1d1d;
+  font-size: 20px;
+  line-height: 30px; /* 150% */
+}
+.input:hover {
+  border-color: #fbe0dc;
+}
+.input:focus {
+  outline: none;
+  border-color: #FF868E;
+}
+.input::placeholder {
+  color: #8c8c8c;
+}
+
+.search-icon {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 40px;
+  height: 40px;
+  background-color: #FBE0DC;
+  border-radius: 10px;
+  background-image: url("../../../public/graphics/search-20.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.top-nav-links {
+  display: flex;
+  gap: 10px;
+}
+
+.top-nav-link {
+  width: 60px;
+  height: 60px;
+  background-color: #fff;
+  border-radius: 20px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.top-nav-link--like {
+  background-image: url("../../../public//graphics/like-30.svg");
+}
+.top-nav-link--favorites {
+  background-image: url("../../../public//graphics/fav-30.svg");
+}
+.top-nav-link--dislike {
+  background-image: url("../../../public//graphics/dislike-30.svg");
+}
+.top-nav-link:hover {
+  background-color: #FBE0DC;
+}
+.top-nav-link--like:active {
+  background-image: url("../../../public//graphics/like-white-30.svg");
+  background-color: #FF868E;
+}
+.top-nav-link--favorites:active {
+  background-image: url("../../../public//graphics/fav-white-30.svg");
+  background-color: #FF868E;
+}
+.top-nav-link--dislike:active {
+  background-image: url("../../../public//graphics/dislike-white-30.svg");
+  background-color: #FF868E;
+}
+
 .nav__title {
   margin-bottom: 20px;
   color: #1D1D1D;
@@ -89,17 +222,42 @@ body {
   display: flex;
   gap: 16px;
 }
+.nav__link-main:hover .nav__link {
+  border-color: #fff;
+}
+.nav__link-main:hover .nav__link-text-container {
+  background-color: #FBE0DC;
+}
+.nav__link-main:active .nav__link {
+  border-color: #fbe0dc;
+}
+.nav__link-main:active .nav__link-text-container {
+  background-color: #FF868E;
+}
+.nav__link-main:active .nav__link-text {
+  color: #fff;
+}
+.nav .nav__link-main--active .nav__link {
+  border-color: #fbe0dc;
+}
+.nav .nav__link-main--active .nav__link-text-container {
+  background-color: #FF868E;
+}
+.nav .nav__link-main--active .nav__link-text {
+  color: #fff;
+}
 .nav__link {
   margin-bottom: 10px;
   border-radius: 20px;
   border: 4px solid rgba(255, 255, 255, 0.6);
-  transition: 0.3s;
+  transition: 0.3s border-color;
 }
 .nav__link-text-container {
   text-align: center;
   border-radius: 10px;
   padding: 10px;
   background-color: #fff;
+  transition: 0.3s background-color;
 }
 .nav__link-text {
   color: #FF868E;
@@ -107,15 +265,7 @@ body {
   line-height: 16px;
   letter-spacing: 2px;
   text-transform: uppercase;
-}
-.nav__link:hover {
-  border-color: #fff;
-}
-.nav__link:hover-text-container {
-  background-color: #FBE0DC;
-}
-.nav__link:hover .nav__link-text-container {
-  background-color: #FBE0DC;
+  transition: 0.3s color;
 }
 .nav__link:active {
   border-color: #fbe0dc;
@@ -134,21 +284,64 @@ body {
   top: 10px;
 }
 
-.cover-poster {
-  width: 100%;
-  height: 100vh;
-  padding: 30px;
-  padding-left: 40px;
+.nav-label {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
 }
-.cover-poster__bg {
+
+.goback {
+  width: 40px;
+  height: 40px;
+  background-color: #FBE0DC;
+  border-radius: 10px;
+  background-image: url("../../../public/graphics/back-20.svg");
+}
+
+.nav-title-container {
+  width: 146px;
+  height: 40px;
+  background-color: #FF868E;
+  border-radius: 10px;
+}
+
+.nav-title {
+  font-size: 20px;
+  line-height: 30px;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.voting {
   height: 100%;
-  width: 100%;
-  background-color: #fbe0dc;
+  padding: 20px;
+}
+
+.voting-container {
+  background-color: #fff;
   border-radius: 20px;
 }
-.cover-poster__img {
-  position: absolute;
-  right: 0;
+
+.voting-hero-container {
+  height: 360px;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.voting-container {
+  position: relative;
+}
+
+.voting-hero {
+  max-height: 100%;
+}
+
+.hero-img {
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  border-radius: 20px;
 }
 
 /*# sourceMappingURL=index.css.map */
