--- a/src/main.scss
+++ b/src/main.scss
@@ -6,4 +6,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;500&display=swap');
 
 @import './App.scss';
+
 @import './features/HomePage/HomePage.scss';
+@import './routes/CoverPoster/CoverPoster.scss';
+@import './components/TopNavBar/TopNavBar.scss';
+@import './components/NavLinkItem/NavLinkItem.scss';
+@import './components/LabelNav/LabelNav.scss';
+@import './features/VotingBoard/VotingBoard.scss';
+@import './features/VotingHero/VotingHero.scss';
