--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -28,3 +28,13 @@ h1, h2, p, ul {
 a {
   text-decoration: none;
 }
+
+button {
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
