--- a/src/features/VotingBoard/VotingBoard.scss
+++ b/src/features/VotingBoard/VotingBoard.scss
@@ -1,13 +1,15 @@
 .voting {
   @extend %flex-cl;
-  height: 100%;
+  // flex-grow: 1;
+  // width: 100%;
+  min-height: 100%;
   padding: 20px;
 }
 
-.voting-container {
-  @extend %flex-cl;
-  // height: 100%;
-  // width: 100%;
-  background-color: $white-color;
-  border-radius: 20px;
-}
+// .voting-container {
+//   @extend %flex-cl;
+//   // height: 100%;
+//   // width: 100%;
+//   background-color: $white-color;
+//   border-radius: 20px;
+// }
