--- a/src/features/VotingHero/VotingHero.scss
+++ b/src/features/VotingHero/VotingHero.scss
@@ -1,7 +1,8 @@
 .voting-hero-container {
+  margin-bottom: 60px;
   height: 360px;
   border-radius: 20px;
-  overflow: hidden; 
+  position: relative;
 }
 
 .voting-container {
@@ -9,17 +10,18 @@
 }
 
 .voting-hero {
-  @extend %flex-rw-centered-full;
-  max-height: 100%;
+  @extend %flex-cl;
+  width: 100%;
+  min-height: 360px;
 }
 
 .hero-img {
   max-width: 100%;
-  max-height: 100%;
-  width: auto;
-  height: auto;
+  // max-width: 550px;
+  // max-width: min-content;
+  display: block;
+  margin: auto;
+  height: 0px;
+  flex-grow: 1;
   border-radius: 20px;
-
-  // object-fit: contain;
-  // object-position: center;
 }
