--- a/src/index.css
+++ b/src/index.css
@@ -40,23 +40,27 @@ button {
   outline: inherit;
 }
 
-.voting-container, .voting, .home-page__left-container {
+li {
+  list-style: none;
+}
+
+.impression-mode--dislike, .impression-mode--fav, .impression-mode--like, .goback {
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.impressionHistory, .voting-hero, .voting, .home-page__left-container, .side-wrapper, .side-inner-container, .side-container-menu {
   display: flex;
   flex-direction: column;
 }
 
-.voting-hero, .nav-title-container, .top-nav-link, .top-nav-links, .cover-poster {
+.nav-title-container, .top-nav-link, .top-nav-links, .cover-poster {
   justify-content: center;
   align-items: center;
 }
 
-.voting-hero, .nav-title-container, .top-nav-link, .top-nav-links, .cover-poster {
+.nav-title-container, .top-nav-link, .top-nav-links, .cover-poster {
   display: flex;
-}
-
-.goback {
-  background-repeat: no-repeat;
-  background-position: center;
 }
 
 body {
@@ -79,18 +83,105 @@ body {
   transform: translate(-50%, -50%);
 }
 
+.dynamic-board {
+  flex-grow: 1;
+  flex-basis: 50%;
+  min-height: 100vh;
+}
+
+.side-container-menu {
+  min-height: 100%;
+  padding: 20px;
+}
+
+.side-inner-container {
+  flex-grow: 1;
+  background-color: #fff;
+  border-radius: 20px;
+}
+
+.side-wrapper {
+  flex-grow: 1;
+  min-height: 100%;
+  padding: 20px;
+}
+
+.parent {
+  height: 100vh;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(9, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+.div1 {
+  grid-area: 1/1/2/2;
+}
+
+.div2 {
+  grid-area: 1/1/3/2;
+}
+
+.div3 {
+  grid-area: 1/2/2/3;
+}
+
+.div4 {
+  grid-area: 1/3/2/4;
+}
+
+.div5 {
+  grid-area: 2/2/3/3;
+}
+
+.div6 {
+  grid-area: 2/2/4/4;
+}
+
+.div7 {
+  grid-area: 3/1/4/2;
+}
+
+.div8 {
+  grid-area: 4/1/5/2;
+}
+
+.div9 {
+  grid-area: 5/1/6/2;
+}
+
+.div10 {
+  grid-area: 5/1/7/2;
+}
+
+.div11 {
+  grid-area: 4/2/5/3;
+}
+
+.div12 {
+  grid-area: 4/3/5/4;
+}
+
+.div13 {
+  grid-area: 4/3/6/4;
+}
+
+.div14 {
+  grid-area: 6/3/7/4;
+}
+
+.div15 {
+  grid-area: 5/1/7/3;
+}
+
 .app {
   display: flex;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   justify-content: space-between;
   padding: 30px;
   padding-left: 147px;
-}
-
-.dynamic-board {
-  flex-basis: 50%;
-  height: 100%;
 }
 
 .home-page {
@@ -98,6 +189,7 @@ body {
 }
 .home-page__left-container {
   gap: 85px;
+  flex-grow: 1;
 }
 .home-page__title {
   margin-bottom: 10px;
@@ -213,6 +305,21 @@ body {
   background-color: #FF868E;
 }
 
+.active-top-link-like .top-nav-link--like {
+  background-image: url("../../../public//graphics/like-white-30.svg");
+  background-color: #FF868E;
+}
+
+.active-top-link-fav .top-nav-link--favorites {
+  background-image: url("../../../public//graphics/fav-white-30.svg");
+  background-color: #FF868E;
+}
+
+.active-top-link-dislike .top-nav-link--dislike {
+  background-image: url("../../../public//graphics/dislike-white-30.svg");
+  background-color: #FF868E;
+}
+
 .nav__title {
   margin-bottom: 20px;
   color: #1D1D1D;
@@ -313,19 +420,15 @@ body {
 }
 
 .voting {
-  height: 100%;
+  min-height: 100%;
   padding: 20px;
 }
 
-.voting-container {
-  background-color: #fff;
-  border-radius: 20px;
-}
-
 .voting-hero-container {
+  margin-bottom: 60px;
   height: 360px;
   border-radius: 20px;
-  overflow: hidden;
+  position: relative;
 }
 
 .voting-container {
@@ -333,15 +436,130 @@ body {
 }
 
 .voting-hero {
-  max-height: 100%;
+  width: 100%;
+  min-height: 360px;
 }
 
 .hero-img {
   max-width: 100%;
-  max-height: 100%;
-  width: auto;
-  height: auto;
+  display: block;
+  margin: auto;
+  height: 0px;
+  flex-grow: 1;
   border-radius: 20px;
+}
+
+.impression-mode--dislike, .impression-mode--fav, .impression-mode--like, .goback {
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.impressionHistory, .side-container-menu, .side-inner-container, .side-wrapper, .home-page__left-container, .voting, .voting-hero {
+  display: flex;
+  flex-direction: column;
+}
+
+.cover-poster, .top-nav-links, .top-nav-link, .nav-title-container {
+  justify-content: center;
+  align-items: center;
+}
+
+.cover-poster, .top-nav-links, .top-nav-link, .nav-title-container {
+  display: flex;
+}
+
+.impression-controller {
+  display: flex;
+  position: absolute;
+  transform: translate(50%, 50%);
+  bottom: 0;
+  right: 50%;
+  max-width: 250px;
+  min-height: 80px;
+  border-radius: 20px;
+  border: 2px solid #fff;
+  overflow: hidden;
+}
+
+.impression-mode {
+  height: 100%;
+  width: 83px;
+  flex-basis: 33%;
+  border-right: 2px solid #fff;
+  transition: 0.3s ease-in background-color, background-image;
+}
+.impression-mode--like {
+  background-color: #97eab9;
+  background-image: url("../../../public/graphics/like-white-30.svg");
+}
+.impression-mode--like:hover {
+  background-color: #e0f9ea;
+  background-image: url("../../../public/graphics/like-color-30.svg");
+}
+.impression-mode--fav {
+  background-color: #FF868E;
+  background-image: url("../../../public/graphics/fav-white-30.svg");
+}
+.impression-mode--fav:hover {
+  background-color: #FBE0DC;
+  background-image: url("../../../public/graphics/fav-30.svg");
+}
+.impression-mode--fav:active {
+  background-color: #FF868E;
+  background-image: url("../../../public/graphics/fav-full-white-30.svg");
+}
+.impression-mode--dislike {
+  background-color: #ffd280;
+  background-image: url("../../../public/graphics/dislike-white-30.svg");
+}
+.impression-mode--dislike:hover {
+  background-color: #fff1d9;
+  background-image: url("../../../public/graphics/dislike-color-30.svg");
+}
+
+.impressionHistory {
+  width: 100%;
+  gap: 10px;
+}
+
+.impressionHistory-item {
+  display: flex;
+  padding: 15px;
+  border-radius: 10px;
+  background: #f8f8f7;
+  background-repeat: no-repeat;
+  background-position: top right;
+  background-position-x: 95%;
+  background-position-y: 50%;
+}
+.impressionHistory-item--like {
+  background-image: url("../../../public/graphics/like-color-20.svg");
+}
+.impressionHistory-item--fav {
+  background-image: url("../../../public/graphics/fav-20.svg");
+}
+.impressionHistory-item--dislike {
+  background-image: url("../../../public/graphics/dislike-color-20.svg");
+}
+
+.impressionHistory-time {
+  margin-right: 20px;
+  padding: 3px 10px;
+  border-radius: 5px;
+  background-color: #fff;
+}
+
+.impressionHistory-text {
+  color: #8c8c8c;
+  font-size: 16px;
+  line-height: 24px; /* 150% */
+}
+
+.impressionHistory-id {
+  padding: 0 4px;
+  color: #1D1D1D;
+  font-weight: 500;
+  line-height: 24px;
 }
 
 /*# sourceMappingURL=index.css.map */
