--- a/src/main.scss
+++ b/src/main.scss
@@ -14,3 +14,4 @@
 @import './components/LabelNav/LabelNav.scss';
 @import './features/VotingBoard/VotingBoard.scss';
 @import './features/VotingHero/VotingHero.scss';
+@import './features/ImpressionController/ImpressionController.scss';
