--- a/src/features/HomePage/HomePage.scss
+++ b/src/features/HomePage/HomePage.scss
@@ -6,6 +6,14 @@
     @extend %flex-cl;
     gap: 85px;
     flex-grow: 1;
+    min-height: 100vh
+    // position: relative;
+  }
+
+  &__welcome-container {
+    position: sticky;
+    top: 20px;
+    bottom: 0;
   }
 
   &__title {
