--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,6 @@
 }
 
 :root {
-  min-height: 100vh;
-  overflow: hidden;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -95,7 +93,6 @@ body {
 }
 
 .side-inner-container {
-  flex-grow: 1;
   background-color: #fff;
   border-radius: 20px;
 }
@@ -106,73 +103,14 @@ body {
   padding: 20px;
 }
 
-.parent {
-  height: 100vh;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(9, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
-}
-
-.div1 {
-  grid-area: 1/1/2/2;
-}
-
-.div2 {
-  grid-area: 1/1/3/2;
-}
-
-.div3 {
-  grid-area: 1/2/2/3;
-}
-
-.div4 {
-  grid-area: 1/3/2/4;
-}
-
-.div5 {
-  grid-area: 2/2/3/3;
-}
-
-.div6 {
-  grid-area: 2/2/4/4;
-}
-
-.div7 {
-  grid-area: 3/1/4/2;
-}
-
-.div8 {
-  grid-area: 4/1/5/2;
-}
-
-.div9 {
-  grid-area: 5/1/6/2;
-}
-
-.div10 {
-  grid-area: 5/1/7/2;
-}
-
-.div11 {
-  grid-area: 4/2/5/3;
-}
-
-.div12 {
-  grid-area: 4/3/5/4;
-}
-
-.div13 {
-  grid-area: 4/3/6/4;
-}
-
-.div14 {
-  grid-area: 6/3/7/4;
-}
-
-.div15 {
-  grid-area: 5/1/7/3;
+.not-found {
+  display: flex;
+  align-items: center;
+  height: 60px;
+  padding: 10px 15px;
+  color: #8C8C8C;
+  background-color: #F8F8F7;
+  border-radius: 10px;
 }
 
 .app {
@@ -184,12 +122,54 @@ body {
   padding-left: 147px;
 }
 
+.parent {
+  display: grid;
+  grid-template-columns: repeat(3, 200px);
+  grid-auto-rows: 140px;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+}
+
+.parent > .cat:nth-child(10n+1),
+.cat:nth-child(10n+8) {
+  grid-column: span 1;
+  grid-row: span 2;
+}
+
+.parent > .cat:nth-child(10n+2),
+.cat:nth-child(10n+5),
+.cat:nth-child(10n+3),
+.cat:nth-child(10n+6),
+.cat:nth-child(10n+7),
+.cat:nth-child(10n+10) {
+  grid-column: span 1;
+}
+
+.parent > .cat:nth-child(10n+4),
+.cat:nth-child(10n+9) {
+  grid-column: span 2;
+  grid-row: span 2;
+}
+
+.parent img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
 .home-page {
   flex-basis: 50%;
 }
 .home-page__left-container {
   gap: 85px;
   flex-grow: 1;
+  min-height: 100vh;
+}
+.home-page__welcome-container {
+  position: sticky;
+  top: 20px;
+  bottom: 0;
 }
 .home-page__title {
   margin-bottom: 10px;
