--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -3,8 +3,8 @@
 }
 
 :root {
-  min-height: 100vh;
-  overflow: hidden;
+  // min-height: 100vh;
+  // overflow: hidden;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
