--- a/src/features/VotingHero/VotingHero.scss
+++ b/src/features/VotingHero/VotingHero.scss
@@ -2,7 +2,7 @@
   margin-bottom: 60px;
   height: 360px;
   border-radius: 20px;
-  position: relative;
+  // position: relative;
 }
 
 .voting-container {
@@ -17,8 +17,6 @@
 
 .hero-img {
   max-width: 100%;
-  // max-width: 550px;
-  // max-width: min-content;
   display: block;
   margin: auto;
   height: 0px;
