--- a/src/main.scss
+++ b/src/main.scss
@@ -5,7 +5,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;500&display=swap');
 
-@import './App.scss';
+// @import './App.scss';
 @import './styles/grid.scss';
 
 @import './features/HomePage/HomePage.scss';
