--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -1,9 +1,13 @@
-.parent {
+.grid {
   display: grid;
   grid-template-columns: repeat(3, 200px);
   grid-auto-rows: 140px;
   grid-column-gap: 20px;
   grid-row-gap: 20px;
+
+  &--fav {
+    margin-bottom: 30px;
+  }
 }
 
 // .cat1{ grid-area: 1 / 1 / 3 / 2; }
@@ -18,13 +22,13 @@
 // .cat10{ grid-area: 6 / 3 / 7 / 3; }
 // .cat11{ grid-area: 7 / 1 / 8 / 2; }
 
-.parent > .cat:nth-child(10n + 1),
+.grid > .cat:nth-child(10n + 1),
 .cat:nth-child(10n + 8) {
   grid-column: span 1;
   grid-row: span 2;
 }
 
-.parent > .cat:nth-child(10n + 2),
+.grid > .cat:nth-child(10n + 2),
 .cat:nth-child(10n + 5),
 .cat:nth-child(10n + 3),
 .cat:nth-child(10n + 6),
@@ -33,15 +37,54 @@
   grid-column: span 1;
 }
 
-.parent > .cat:nth-child(10n + 4),
+.grid > .cat:nth-child(10n + 4),
 .cat:nth-child(10n + 9) {
   grid-column: span 2;
   grid-row: span 2;
 }
 
-.parent img {
+.grid img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 20px;
+}
+
+.cat {
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  background: rgba(255, 134, 142, 0.6);
+  opacity: 0; /* Initially hidden */
+  transition: opacity 0.3s ease;
+}
+
+.overlay-heart {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
+  width: 40px;
+  height: 40px;
+  background-color: #fff;
+  background-image: url('../../public//graphics/fav-color-20.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+}
+
+.cat:hover .overlay {
+  opacity: 1; 
+}
+
+.overlay-heart:active {
+  background-image: url('../../public//graphics/fav-20.svg');
 }
