--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -3,16 +3,17 @@
 }
 
 :root {
-  // min-height: 100vh;
-  // overflow: hidden;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  // box-sizing: border-box;
+  // // min-height: 100vh;
+  // // overflow: hidden;
+  // // font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  // // line-height: 1.5;
+  // font-weight: 400;
+  // font-synthesis: none;
+  // text-rendering: optimizeLegibility;
+  // -webkit-font-smoothing: antialiased;
+  // -moz-osx-font-smoothing: grayscale;
+  // -webkit-text-size-adjust: 100%;
 }
 
 body {
