feat: implement API types and create fetch

--- a/src/main.scss
+++ b/src/main.scss
@@ -10,6 +10,7 @@
 
 @import './features/HomePage/HomePage.scss';
 @import './routes/CoverPoster/CoverPoster.scss';
+@import './routes/Breeds/Breeds.scss';
 @import './components/TopNavBar/TopNavBar.scss';
 @import './components/NavLinkItem/NavLinkItem.scss';
 @import './components/LabelNav/LabelNav.scss';
