--- a/src/index.css
+++ b/src/index.css
@@ -99,7 +99,6 @@ body {
   background-color: #fff;
   border-radius: 20px;
 }
-
 .side-wrapper {
   flex-grow: 1;
   min-height: 100%;
@@ -232,6 +231,58 @@ body {
 .cover-poster__img {
   position: absolute;
   right: 0;
+}
+
+.breeds-navbar-container {
+  display: flex;
+  gap: 10px;
+}
+
+.breeds-navbar {
+  display: flex;
+  flex-grow: 1;
+  gap: 10px;
+}
+.breeds-navbar__select {
+  height: 40px;
+  padding: 8px 10px;
+  width: 100%;
+  font-size: 16px;
+  line-height: 24px; /* 150% */
+  border-radius: 10px;
+  color: #8c8c8c;
+  background: #f8f8f7;
+  -webkit-appearance: none;
+  background-image: url("../../../public/graphics/dropdown-12.svg");
+  background-repeat: no-repeat;
+  background-position: right;
+  background-position-x: 90%;
+  border: 2px solid #f8f8f7;
+}
+.breeds-navbar__select:hover {
+  border: 2px solid #FBE0DC;
+}
+.breeds-navbar__select:focus {
+  outline-color: #FBE0DC;
+}
+.breeds-navbar__select--limit {
+  max-width: 110px;
+}
+.breeds-navbar__sort {
+  min-width: 40px;
+  height: 40px;
+  background: #f8f8f7;
+  border-radius: 10px;
+}
+.breeds-navbar__sort--desc {
+  background-image: url("../../../public/graphics/sort-revert-20.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.breeds-navbar__sort--asc {
+  background-image: url("../../../public/graphics/sort-20.svg");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .top-nav {
