--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -53,6 +53,10 @@ body {
   max-height: 100%;
   background-color: $white-color;
   border-radius: 20px;
+
+  &--breeds {
+    // flex-direction: column
+  }
 }
 
 // /ref .voting
