--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -52,6 +52,8 @@
 
 .cat {
   position: relative;
+  cursor: pointer;
+
 }
 
 .overlay {
@@ -62,27 +64,40 @@
   height: 100%;
   border-radius: 20px;
   background: rgba(255, 134, 142, 0.6);
-  opacity: 0; /* Initially hidden */
+  opacity: 0;
   transition: opacity 0.3s ease;
 }
 
-.overlay-heart {
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 10px;
-  width: 40px;
+.overlay-bg {
   height: 40px;
+  position: relative;
+  border-radius: 10px;
   background-color: #fff;
-  background-image: url('../../public//graphics/fav-color-20.svg');
-  background-repeat: no-repeat;
-  background-position: center;
-  cursor: pointer;
+
+  &--fav {
+    width: 40px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-image: url('../../public//graphics/fav-color-20.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  &--breed {
+    width: 90%;
+    top: 78%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    color: #ff868e;
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
 
 .cat:hover .overlay {
-  opacity: 1; 
+  opacity: 1;
 }
 
 .overlay-heart:active {
