--- a/src/main.scss
+++ b/src/main.scss
@@ -11,6 +11,7 @@
 @import './features/HomePage/HomePage.scss';
 @import './routes/CoverPoster/CoverPoster.scss';
 @import './routes/Breeds/Breeds.scss';
+@import './routes/BreedsInfo/BreedsInfo.scss';
 @import './components/TopNavBar/TopNavBar.scss';
 @import './components/NavLinkItem/NavLinkItem.scss';
 @import './components/LabelNav/LabelNav.scss';
