chore: Clean up comments

--- a/src/components/TopNavBar/TopNavBar.scss
+++ b/src/components/TopNavBar/TopNavBar.scss
@@ -20,7 +20,7 @@
   border: 2px solid $white-color;
   color: #1d1d1d;
   font-size: 20px;
-  line-height: 30px; /* 150% */
+  line-height: 30px;
 
   &:hover {
     border-color: #fbe0dc;
