--- a/src/routes/Breeds/Breeds.scss
+++ b/src/routes/Breeds/Breeds.scss
@@ -14,7 +14,7 @@
     width: 100%;
 
     font-size: 16px;
-    line-height: 24px; /* 150% */
+    line-height: 24px;
 
     border-radius: 10px;
     color: #8c8c8c;
