--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -2,27 +2,17 @@
   box-sizing: border-box;
 }
 
-:root {
-  // box-sizing: border-box;
-  // // min-height: 100vh;
-  // // overflow: hidden;
-  // // font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  // // line-height: 1.5;
-  // font-weight: 400;
-  // font-synthesis: none;
-  // text-rendering: optimizeLegibility;
-  // -webkit-font-smoothing: antialiased;
-  // -moz-osx-font-smoothing: grayscale;
-  // -webkit-text-size-adjust: 100%;
-}
-
 body {
   margin: 0;
   min-height: 100vh;
   overflow: overlay;
 }
 
-h1, h2, h3, p, ul {
+h1,
+h2,
+h3,
+p,
+ul {
   margin: 0;
 }
 
@@ -32,12 +22,12 @@ a {
 
 button {
   background: none;
-	color: inherit;
-	border: none;
-	padding: 0;
-	font: inherit;
-	cursor: pointer;
-	outline: inherit;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
 }
 
 li {
