--- a/src/main.scss
+++ b/src/main.scss
@@ -11,9 +11,12 @@
 @import './routes/CoverPoster/CoverPoster.scss';
 @import './routes/Breeds/Breeds.scss';
 @import './routes/BreedsInfo/BreedsInfo.scss';
+@import './routes/Gallery/Gallery.scss';
+
 @import './components/TopNavBar/TopNavBar.scss';
 @import './components/NavLinkItem/NavLinkItem.scss';
 @import './components/LabelNav/LabelNav.scss';
+
 @import './features/VotingBoard/VotingBoard.scss';
 @import './features/VotingHero/VotingHero.scss';
 @import './features/ImpressionController/ImpressionController.scss';
