--- a/src/routes/Breeds/Breeds.scss
+++ b/src/routes/Breeds/Breeds.scss
@@ -9,31 +9,33 @@
   gap: 10px;
 
   &__select {
-    height: 40px;
-    padding: 8px 10px;
-    width: 100%;
-
-    font-size: 16px;
-    line-height: 24px;
-
-    border-radius: 10px;
     color: #8c8c8c;
-    background: #f8f8f7;
-    -webkit-appearance: none;
-    background-image: url('../../../public/graphics/dropdown-12.svg');
-    background-repeat: no-repeat;
-    background-position: right;
-    background-position-x: 90%;
-    border: 2px solid #f8f8f7;
-    cursor: pointer;
 
-    &:hover {
-      border: 2px solid #fbe0dc;
-    }
+  //   height: 40px;
+  //   padding: 8px 10px;
+  //   width: 100%;
 
-    &:focus {
-      outline-color: #fbe0dc;
-    }
+  //   font-size: 16px;
+  //   line-height: 24px;
+
+  //   border-radius: 10px;
+  //   color: #8c8c8c;
+  //   background: #f8f8f7;
+  //   -webkit-appearance: none;
+  //   background-image: url('../../../public/graphics/dropdown-12.svg');
+  //   background-repeat: no-repeat;
+  //   background-position: right;
+  //   background-position-x: 90%;
+  //   border: 2px solid #f8f8f7;
+  //   cursor: pointer;
+
+  //   &:hover {
+  //     border: 2px solid #fbe0dc;
+  //   }
+
+  //   &:focus {
+  //     outline-color: #fbe0dc;
+  //   }
   }
 
   &__select--limit {
@@ -67,5 +69,33 @@
       background-repeat: no-repeat;
       background-position: center;
     }
+  }
+}
+
+.select {
+  height: 40px;
+  padding: 8px 10px;
+  width: 100%;
+
+  font-size: 16px;
+  line-height: 24px;
+
+  border-radius: 10px;
+  background-color: #f8f8f7;
+  -webkit-appearance: none;
+  background-image: url('../../../public/graphics/dropdown-12.svg');
+  background-repeat: no-repeat;
+  background-position: right;
+  background-position-x: 90%;
+  border: 2px solid #f8f8f7;
+  cursor: pointer;
+  
+
+  &:hover {
+    border: 2px solid #fbe0dc;
+  }
+
+  &:focus {
+    outline-color: #fbe0dc;
   }
 }
