--- a/src/components/NavLinkItem/NavLinkItem.scss
+++ b/src/components/NavLinkItem/NavLinkItem.scss
@@ -47,6 +47,11 @@
     border-radius: 20px;
     border: 4px solid #ffffff99;
     transition: 0.3s border-color;
+    min-height: 212px;
+    min-width: 146px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     &-text-container {
       text-align: center;
@@ -63,6 +68,11 @@
       letter-spacing: 2px;
       text-transform: uppercase;
       transition: 0.3s color;
+    }
+
+    &-img--pre {
+      height: 163px;
+      width: 117px;
     }
 
     &:active {
