--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -11,13 +11,6 @@ body {
   font-weight: 400;
 }
 
-.loader {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
 .app {
   display: flex;
   min-height: 100vh;
@@ -46,12 +39,9 @@ body {
 .side-inner-container {
   @extend %flex-cl;
   flex-grow: 1;
-  max-height: 100%;
+  min-height: 100%;
   background-color: $white-color;
   border-radius: 20px;
-
-  &--breeds {
-  }
 }
 .side-wrapper {
   @extend %flex-cl;
@@ -72,6 +62,15 @@ body {
   border-radius: 10px;
 }
 
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .loader-parent {
+  width: 100%;
+  min-height: 45vh;
   position: relative;
 }
