feat(gallery): implement upload functionality

--- a/src/main.scss
+++ b/src/main.scss
@@ -20,3 +20,4 @@
 @import './features/VotingBoard/VotingBoard.scss';
 @import './features/VotingHero/VotingHero.scss';
 @import './features/ImpressionController/ImpressionController.scss';
+@import './features/UploadModal/UploadModal.scss';
