--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -1,6 +1,10 @@
 body {
   font-family: 'Jost';
   background-color: #f8f8f7;
+
+  // // &--upload {
+  //   background-color: rgba(29, 29, 29, 0.60);
+  // // }
 }
 
 .title {
