--- a/src/features/ImpressionController/ImpressionController.scss
+++ b/src/features/ImpressionController/ImpressionController.scss
@@ -3,9 +3,8 @@
 .impression-controller {
   display: flex;
   position: absolute;
-  transform: translate(50%, 50%);
-  bottom: 0;
-  right: 50%;
+  transform: translate(-50%, -50%);
+  left: 50%;
   max-width: 250px;
   min-height: 80px;
   border-radius: 20px;
