--- a/src/index.css
+++ b/src/index.css
@@ -35,22 +35,22 @@ li {
   list-style: none;
 }
 
-.impression-mode--dislike, .impression-mode--fav, .impression-mode--like, .goback, .gallery__action-btn {
+.upload__custom-label, .upload__btn-close, .impression-mode--dislike, .impression-mode--fav, .impression-mode--like, .goback, .gallery__action-btn {
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.impressionHistory, .voting-hero, .voting, .side-wrapper, .side-inner-container, .side-container-menu, .home-page__left-container {
+.upload__preview, .impressionHistory, .voting-hero, .voting, .side-wrapper, .side-inner-container, .side-container-menu, .home-page__left-container {
   display: flex;
   flex-direction: column;
 }
 
-.nav-title-container, .top-nav-link, .top-nav-links, .breed-id-label, .cover-poster {
+.upload__custom-label, .nav-title-container, .top-nav-link, .top-nav-links, .breed-id-label, .cover-poster {
   justify-content: center;
   align-items: center;
 }
 
-.nav-title-container, .top-nav-link, .top-nav-links, .breed-id-label, .cover-poster {
+.upload__custom-label, .nav-title-container, .top-nav-link, .top-nav-links, .breed-id-label, .cover-poster {
   display: flex;
 }
 
@@ -129,10 +129,10 @@ body {
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(3, 200px);
-  grid-auto-rows: 140px;
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 120px;
+  grid-column-gap: 15px;
+  grid-row-gap: 15px;
 }
 .grid--fav {
   margin-bottom: 30px;
@@ -197,6 +197,21 @@ body {
   background-image: url("../../public//graphics/fav-color-20.svg");
   background-repeat: no-repeat;
   background-position: center;
+}
+.overlay-bg--fav:active {
+  background-image: url("../../public//graphics/fav-20.svg");
+}
+.overlay-bg--to-fav {
+  width: 40px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-image: url("../../public//graphics/fav-20.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.overlay-bg--to-fav:active {
+  background-image: url("../../public//graphics/fav-color-20.svg");
 }
 .overlay-bg--breed {
   width: 90%;
@@ -717,6 +732,7 @@ body {
 .voting-hero {
   width: 100%;
   min-height: 360px;
+  position: relative;
 }
 
 .hero-img {
@@ -728,31 +744,30 @@ body {
   border-radius: 20px;
 }
 
-.impression-mode--dislike, .impression-mode--fav, .impression-mode--like, .gallery__action-btn, .goback {
+.upload__custom-label, .upload__btn-close, .impression-mode--dislike, .impression-mode--fav, .impression-mode--like, .gallery__action-btn, .goback {
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.impressionHistory, .home-page__left-container, .side-container-menu, .side-inner-container, .side-wrapper, .voting, .voting-hero {
+.upload__preview, .impressionHistory, .home-page__left-container, .side-container-menu, .side-inner-container, .side-wrapper, .voting, .voting-hero {
   display: flex;
   flex-direction: column;
 }
 
-.cover-poster, .breed-id-label, .top-nav-links, .top-nav-link, .nav-title-container {
+.upload__custom-label, .cover-poster, .breed-id-label, .top-nav-links, .top-nav-link, .nav-title-container {
   justify-content: center;
   align-items: center;
 }
 
-.cover-poster, .breed-id-label, .top-nav-links, .top-nav-link, .nav-title-container {
+.upload__custom-label, .cover-poster, .breed-id-label, .top-nav-links, .top-nav-link, .nav-title-container {
   display: flex;
 }
 
 .impression-controller {
   display: flex;
   position: absolute;
-  transform: translate(50%, 50%);
-  bottom: 0;
-  right: 50%;
+  transform: translate(-50%, -50%);
+  left: 50%;
   max-width: 250px;
   min-height: 80px;
   border-radius: 20px;
@@ -841,6 +856,127 @@ body {
   padding: 0 4px;
   color: #1D1D1D;
   font-weight: 500;
+  line-height: 24px;
+}
+
+.body-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(29, 29, 29, 0.6);
+  visibility: visible;
+}
+
+.upload {
+  transform: translateX(100%);
+  transition: transform 0.3s;
+}
+.upload--open {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  position: fixed;
+  height: calc(100% - 60px);
+  width: 720px;
+  top: 30px;
+  right: 30px;
+  padding: 20px;
+  border-radius: 20px;
+  background-color: #f8f8f7;
+  transform: translateX(0);
+}
+.upload__btn-close {
+  margin-bottom: 40px;
+  width: 40px;
+  height: 40px;
+  background-color: #fff;
+  background-image: url("../../../public//graphics/close-20.svg");
+  border-radius: 10px;
+  align-self: flex-end;
+}
+.upload__btn-close:hover {
+  background-color: #FF868E;
+  background-image: url("../../../public//graphics/close-white-20.svg");
+}
+.upload__title {
+  margin-bottom: 10px;
+  color: #1d1d1d;
+  font-size: 36px;
+}
+.upload__p {
+  margin-bottom: 40px;
+  color: #8c8c8c;
+  font-size: 20px;
+  line-height: 30px; /* 150% */
+}
+.upload__link {
+  color: #ff868e;
+  font-size: 20px;
+  line-height: 30px;
+  cursor: pointer;
+}
+.upload__custom-label {
+  height: 320px;
+  width: 100%;
+  margin-bottom: 20px;
+  background-color: #fff;
+  background-image: url(../../../public/graphics/upload-bg.png);
+  background-position: center;
+  border-radius: 20px;
+  border: 2px dashed #fbe0dc;
+  cursor: pointer;
+}
+.upload__info {
+  color: #8C8C8C;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+}
+.upload__info span {
+  color: #1d1d1d;
+}
+.upload__input {
+  display: none;
+}
+.upload__preview {
+  width: 80%;
+  height: 280px;
+}
+.upload__status {
+  margin-bottom: 20px;
+  color: #8C8C8C;
+  font-style: normal;
+  line-height: 30px;
+}
+.upload__confirm {
+  align-self: center;
+  width: 172px;
+  height: 40px;
+  text-transform: uppercase;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 2px;
+  border-radius: 10px;
+  color: #fff;
+  background-color: #FF868E;
+}
+.upload__success-container {
+  padding: 20px;
+  height: 60px;
+  border-radius: 10px;
+  background: #fff;
+  background-image: url("../../../public/graphics/success-20.svg");
+  background-position: left;
+  background-repeat: no-repeat;
+  background-position-x: 10px;
+}
+.upload__success {
+  width: max-content;
+  margin-left: 25px;
+  color: #8C8C8C;
+  font-size: 16px;
   line-height: 24px;
 }
 
