--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -1,9 +1,9 @@
 .grid {
   display: grid;
-  grid-template-columns: repeat(3, 200px);
-  grid-auto-rows: 140px;
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 120px;
+  grid-column-gap: 15px;
+  grid-row-gap: 15px;
 
   &--fav {
     margin-bottom: 30px;
@@ -69,6 +69,24 @@
     background-image: url('../../public//graphics/fav-color-20.svg');
     background-repeat: no-repeat;
     background-position: center;
+
+    &:active {
+      background-image: url('../../public//graphics/fav-20.svg');
+    }
+  }
+
+  &--to-fav {
+    width: 40px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-image: url('../../public//graphics/fav-20.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+
+    &:active {
+      background-image: url('../../public//graphics/fav-color-20.svg');
+    }
   }
 
   &--breed {
