--- a/src/components/TopNavBar/TopNavBar.scss
+++ b/src/components/TopNavBar/TopNavBar.scss
@@ -45,7 +45,9 @@
   height: 40px;
   background-color: $red-bg-color;
   border-radius: 10px;
-  // background-image: url('../../../public/graphics/search-20.svg');
+  background-image: url('./graphics/search-20.svg');
+  // background-image: url('../graphics/search-20.svg');
+  // background-image: url('build/graphics/search-20.svg');
   background-repeat: no-repeat;
   background-position: center;
 
